{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 18,
  "lineage": "f57c328b-b5af-d2bf-5488-ecc39f339a32",
  "resources": [
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:internet-gateway/igw-0724f9f7e54f1aaad",
            "id": "igw-0724f9f7e54f1aaad",
            "owner_id": "569023477847",
            "tags": {
              "Name": "MYIGW"
            },
            "tags_all": {
              "Name": "MYIGW"
            },
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0688016058ca54c94",
            "association_id": "eipassoc-00dc6f91148fe0f5b",
            "connectivity_type": "public",
            "id": "nat-02724d1b9e6cd005b",
            "network_interface_id": "eni-0d9260029022cc119",
            "private_ip": "10.0.1.67",
            "public_ip": "54.85.39.88",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00f7e0bc6f19416d7",
            "tags": {
              "Name": "MYNATGW"
            },
            "tags_all": {
              "Name": "MYNATGW"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:route-table/rtb-0a7dd2b3680674a93",
            "id": "rtb-0a7dd2b3680674a93",
            "owner_id": "569023477847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02724d1b9e6cd005b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "tags_all": {
              "Name": "Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_nat_gateway.ngw",
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:route-table/rtb-0e173626803cdd225",
            "id": "rtb-0e173626803cdd225",
            "owner_id": "569023477847",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0724f9f7e54f1aaad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateRT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fc599138c6806ff",
            "route_table_id": "rtb-0a7dd2b3680674a93",
            "subnet_id": "subnet-0d1702dd983c5d857"
          },
          "dependencies": [
            "module.vpc_module.aws_nat_gateway.ngw",
            "module.vpc_module.aws_route_table.privateRT",
            "module.vpc_module.aws_subnet.privatesubnet",
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069fa6a047e787cd3",
            "route_table_id": "rtb-0a7dd2b3680674a93",
            "subnet_id": "subnet-0bdf479a1adb0e7a6"
          },
          "dependencies": [
            "module.vpc_module.aws_nat_gateway.ngw",
            "module.vpc_module.aws_route_table.privateRT",
            "module.vpc_module.aws_subnet.privatesubnet",
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f031ff0520c3bd8",
            "route_table_id": "rtb-0a7dd2b3680674a93",
            "subnet_id": "subnet-0d0f4e24806194d7a"
          },
          "dependencies": [
            "module.vpc_module.aws_nat_gateway.ngw",
            "module.vpc_module.aws_route_table.privateRT",
            "module.vpc_module.aws_subnet.privatesubnet",
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adff7f74c7ccdd18",
            "route_table_id": "rtb-0e173626803cdd225",
            "subnet_id": "subnet-00f7e0bc6f19416d7"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_route_table.publicRT",
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d00acc8a0738ad48",
            "route_table_id": "rtb-0e173626803cdd225",
            "subnet_id": "subnet-05381e360480918fa"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_route_table.publicRT",
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051f6db913a843270",
            "route_table_id": "rtb-0e173626803cdd225",
            "subnet_id": "subnet-01c6884c83070ca7b"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.main",
            "module.vpc_module.aws_route_table.publicRT",
            "module.vpc_module.aws_subnet.publicsubnet",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-0d1702dd983c5d857",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1702dd983c5d857",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-1"
            },
            "tags_all": {
              "Name": "private_subnet-1"
            },
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-0bdf479a1adb0e7a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdf479a1adb0e7a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-2"
            },
            "tags_all": {
              "Name": "private_subnet-2"
            },
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-0d0f4e24806194d7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0f4e24806194d7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet-3"
            },
            "tags_all": {
              "Name": "private_subnet-3"
            },
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-00f7e0bc6f19416d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f7e0bc6f19416d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-1"
            },
            "tags_all": {
              "Name": "public_subnet-1"
            },
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-05381e360480918fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05381e360480918fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-2"
            },
            "tags_all": {
              "Name": "public_subnet-2"
            },
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:subnet/subnet-01c6884c83070ca7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c6884c83070ca7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569023477847",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet-3"
            },
            "tags_all": {
              "Name": "public_subnet-3"
            },
            "vpc_id": "vpc-0e0d372181f8180e5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569023477847:vpc/vpc-0e0d372181f8180e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dbafbad5c0185e0",
            "default_route_table_id": "rtb-0684de6e440df1405",
            "default_security_group_id": "sg-02b46415d729d9c3a",
            "dhcp_options_id": "dopt-4d320837",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e0d372181f8180e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0684de6e440df1405",
            "owner_id": "569023477847",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}